Fix potential crash fetching icon from AppEnrty

There is a code path for m_service and m_icon to be null, for example if
defaultAppByName can't find anything.

I did not reproduce the original crash.

BUG: 423524